<resources>
    <string name="app_name">TVCheck</string>
    <string name="Api_key">484e1ff4932e21df205102c405aaf440</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Login">Login </string>
    <string name="SignUp">Sign Up</string>
    <string name="Conpassword">Confirm Password</string>
    <string name="SignUpPrompt">Dont have an account? Sign up!</string>
    <string name="LoginPrompt">Already have an account? Log in!</string>
    <string name="Profile">Profile</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="Home">Home</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">odh0gNyGiahDHq4WOUANScJyquexK7BwZUyWort7</string>
    <string name="back4app_client_key">9Bgz5McJAqWxRGbgovrzPI1ldkKtO40RH2HC3pbc</string>
    <string name="Parse_server_url">mongodb://admin:YVM5iacvCRANhFU9B7a5jFW6@mongodb7.back4app.com:27017/42a615fd04304e09af914dee9bb8d775?ssl=true</string>
    <string name="app_label">TvCheck</string>
    <string name="search_hint">Search Tv Shows</string>
    <string name="search_title">Search</string>
    <string name="base_address_w185">https://image.tmdb.org/t/p/w185</string>
    <string name="base_address_w500">https://image.tmdb.org/t/p/w500</string>
    <string name="base_address_original">https://image.tmdb.org/t/p/original</string>
    <string name="New_List...">New List…</string>
    <string name="list_name">Enter list name:</string>
    <string name="popular_TV">Popular TV</string>
    <string name="top_rated_TV">Top Rated TV</string>
    <string name="watched">Watched</string>
    <string name="create">Create</string>
    <string name="Cancel">Cancel</string>
    <string name="listName">Please enter list name</string>
    <string name="emptyLists">Follow some shows to get recommendations</string>
    <string name="Source">Information From TMDB</string>
    <string name="MayAlsoLike">You may also like…</string>
    <string name="Overview">Overview</string>
    <string name="airDate">Air Date: </string>
    <string name="EpCount">Episode Count: </string>
    <string name="voteAvg">Vote Average: </string>
    <string name="Cast">Cast</string>
    <string name="Name">Name</string>
    <string name="ListItemDesc">Image of list item</string>
    <string name="crewpicDesc">Picture of Crew member</string>
    <string name="EpImageDesc">Episode Image</string>
    <string name="BackBtnDesc">Back Button</string>
    <string name="SeasonImageDesc">Season Image</string>
    <string name="ShowImageDesc">Show Image</string>
    <string name="SearchImageDesc">Search Button</string>
    <string name="similarImageDesc">Image of similar show to list shows</string>
    <string name="ApiCredit">Image to show that the app is powered by TMDB Api</string>



</resources>
