<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/colorPrimaryDark"
                tools:context="uk.ac.tees.p4061644.tvcheck.SignUpActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/SIgn_Up_Email"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/Sign_Up_Pass1"
        android:layout_alignStart="@+id/Sign_Up_Pass1"
        android:layout_marginTop="103dp"
        android:hint="@string/Email" />

    <TextView
        android:text="@string/LoginPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Sign_Up_TVLogin"
        android:layout_below="@+id/Sign_Up_Btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />
    <ProgressBar
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/SignUp_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Sign_Up_Pass2"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/Sign_Up_Pass1"
        android:layout_alignStart="@+id/Sign_Up_Pass1"
        android:hint="@string/Conpassword" />

    <Button
        android:text="@string/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Sign_Up_Btn"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/Sign_Up_Pass2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Sign_Up_Pass1"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/SIgn_Up_Email"
        android:layout_centerHorizontal="true"
        android:hint="@string/Password" />
</RelativeLayout>
