<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="uk.ac.tees.p4061644.tvcheck.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:id="@+id/movie_name_label" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_alignTop="@+id/movie_name_label"
        android:layout_alignRight="@+id/Login_email"
        android:layout_alignEnd="@+id/Login_email"
        android:id="@+id/Login_Pass"
        android:hint="@string/Password" />

    <Button
        android:text="@string/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_Pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:id="@+id/Login_Btn" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginBottom="48dp"
        android:id="@+id/Login_email"
        android:layout_above="@+id/Login_Pass"
        android:layout_centerHorizontal="true"
        android:hint="@string/Email" />

    <TextView
        android:text="@string/SignUpPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_Btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:id="@+id/Login_TVsignUp" />

    <ProgressBar
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/Login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="2dp"/>

</RelativeLayout>
