<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.tees.p4061644.tvcheck_redo.HomeActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rellayout1">


        <!-- Middle Section -->

        <!-- Bottom nav -->

        <include layout="@layout/layout_bottom_navigation_view"/>

        <TextView
            android:text="@string/popular_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/popular_TV"
            android:textSize="20sp"
            android:layout_above="@+id/recycle_popular"
            android:layout_alignParentStart="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relLayout2"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/img_view"
                android:layout_marginTop="46dp">

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Name_txt"
                    android:textSize="18sp"/>

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/OverView_txt"
                    android:maxLines="5"
                    android:ellipsize="end"/>
            </LinearLayout>

            <ImageView
                android:layout_width="250px"
                android:layout_height="350px"
                app:srcCompat="@drawable/ic_default_search_image"
                android:id="@+id/img_view"
                android:layout_below="@+id/Similar_txt"
                android:layout_alignParentStart="true"/>

            <TextView
                android:text="@string/emptyLists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emptyLists_txt"
                android:layout_alignBottom="@+id/relLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="61dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:visibility="gone"
                android:textStyle="normal|bold"
                android:layout_below="@+id/Similar_txt"/>

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Similar_txt"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycle_top_rated"
            android:layout_below="@+id/top_rated_TV"
            android:layout_alignParentStart="true">

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycle_popular"
            android:layout_below="@+id/recycle_top_rated"
            android:layout_alignParentStart="true">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:text="@string/top_rated_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_rated_TV"
            android:textSize="20sp"
            android:layout_below="@+id/relLayout2"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
